# XM_pytest

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: playwright.yml
pages/: base_page.py  cookie_consent_page.py  home_page.py  navigation_page.py
test_data/: xm_data.py
tests/: test_cookie_consent.py  test_homepage.py  test_locators_showcase.py  test_navigation.py  test_network.py  test_websocket.py
utils/: websocket_monitor.py
